# ucas

./: .jiu.toml  Cargo.toml  README.md
.github/workflows/: release.yml
iclass/: .jiu.toml  Cargo.toml  README.md
iclass/src/: cli.rs
src/: checkin.rs  cli.rs  lib.rs  login.rs  main.rs  query.rs  util.rs
tests/: integration_test.rs
