[package]
name = "ucas-iclass"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "UCAS iClass"
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/ucas-iclass"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]

[[bin]]
name = "ucas-iclass"
required-features = ["cli"]

[features]
cli = []

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
