[workspace]
resolver = "2"
members = [ "iclass"]

[workspace.package]
edition = "2024"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/ucas"
license = "MIT"
authors = ["PRO-2684"]

[workspace.dependencies]
anyhow = { version = "1.0.100" }
argh = { version = "0.1.13", default-features = false, features = ["help"] }
compio = { version = "0.16.0", features = ["macros"] }
cyper = { version = "0.5.0", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
url = "2.5.7"
