[package]
name = "ucas-iclass"
version = "0.1.2"
readme = "README.md"
description = "iClass API for UCAS"
keywords = ["api", "ucas", "iclass", "university"]
categories = ["command-line-utilities", "network-programming", "web-programming::http-client"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
argh = { workspace = true, optional = true }
chrono = { version = "0.4.42", default-features = false, features = ["std", "now"] }
compio = { workspace = true, optional = true }
cyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[[bin]]
name = "ucas-iclass"
required-features = ["cli"]

[features]
cli = ["anyhow", "argh", "compio"]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
